tests/errors/semantics/expects_constant_for_init_list_lhs.odl
main :: () -> void  {
    y := int;
    x := y.{1, 2};
};